<resources>
    <string name="app_name">NavigationDrawer</string>
    <string name="my_image">my_image</string>
    <string name="tvusername">Junaid TT</string>
    <string name="tvEmail">junaid@ibookholiday.com</string>
    <string name="Inbox">Inbox</string>
    <string name="starred">Starred</string>
    <string name="send_mail">Send Mail</string>
    <string name="draft">Drafts</string>
    <string name="Subheader">subheader</string>
    <string name="all_mail">All Mail</string>
    <string name="trash">Trash</string>
    <string name="spam">Spam</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation_drawer</string>
</resources>
