<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:title="@string/Inbox"
            android:id="@+id/indox_id"
            android:icon="@drawable/inbox">
        </item>
        <item android:title="@string/starred"
            android:id="@+id/starred_id"
            android:icon="@drawable/star">
        </item>

        <item android:title="@string/send_mail"
            android:id="@+id/send_email_id"
            android:icon="@drawable/send">
        </item>
        <item android:title="@string/draft"
            android:id="@+id/draft_id"
            android:icon="@drawable/draft">
        </item>
    </group>

    <item android:title="@string/Subheader">

        <menu>

            <item android:title="@string/all_mail"
                android:id="@+id/allmail_id"
                android:icon="@drawable/allmail">
            </item>

            <item android:title="@string/trash"
                android:id="@+id/trash_id"
                android:icon="@drawable/delete">

            </item>
            <item android:title="@string/spam"
                android:id="@+id/spam_id"
                android:icon="@drawable/spam">

            </item>
        </menu>

    </item>

</menu>